# fmd-adm

./: Cargo.toml  README.md
fmd-adm/: Cargo.toml  README.md
fmd-adm-sys/: Cargo.toml  README.md  build.rs  generate.sh  wrapper.h
fmd-adm-sys/src/: lib.rs
fmd-adm/examples/: case_detail.rs  inventory_preview.rs  list_modules.rs  stats.rs
fmd-adm/src/: lib.rs
